--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=web
-spring.datasource.url = jdbc:postgresql://localhost:5432/ems
+spring.datasource.url = jdbc:postgresql://localhost:5432/datalearning
 spring.datasource.username=postgres
 spring.datasource.password=Takikuty123.
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.main.banner-mode=off
 spring.java.show-sql = true
+# Set the logging level for your package to DEBUG
+logging.level.com.runweather.web=DEBUG
+# Set the logging level for your package to DEBUG
+
