--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.application.name=web
 spring.datasource.url = jdbc:postgresql://localhost:5432/datalearning
 spring.datasource.username=postgres
 spring.datasource.password=Takikuty123.
+file.upload.path=/Users/phanmanhha/Documents/web2
+
+
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.main.banner-mode=off
